# equitable-batch-api

./: .gitignore  PIPELINE_GUIDE.md  README.md  check_status.py  main.py  pyproject.toml  run_analysis.py
assets/: 10-scenario-inputs.csv
helpers/: __init__.py  aggregate.py  batch.py  chunk.py  config.py  models.py  threads.py
